--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="password">Password</string>
     <string name="register">Register</string>
     <string name="confirm_password">Confirm password</string>
+    <string name="enrolled_courses">Enrolled Courses</string>
 </resources>
