--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="register">Register</string>
     <string name="confirm_password">Confirm password</string>
     <string name="enrolled_courses">Enrolled Courses</string>
+    <string name="home">Home</string>
+    <string name="log_out">Log Out</string>
 </resources>
