fixed UI and navbar for enrolled classes list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="enrolled_courses">Enrolled Courses</string>
     <string name="home">Home</string>
     <string name="log_out">Log Out</string>
+    <string name="dashboard">Dashboard</string>
 </resources>
