dashboard front-end with group list, join group and create group overlays

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="home">Home</string>
     <string name="log_out">Log Out</string>
     <string name="dashboard">Dashboard</string>
+    <string name="create_group">Create Group</string>
+    <string name="join_group">Join Group</string>
+    <string name="group_name">Group Name</string>
+    <string name="enter_group_name">Enter Group Name</string>
 </resources>
