--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="join_group">Join Group</string>
     <string name="group_name">Group Name</string>
     <string name="enter_group_name">Enter Group Name</string>
+    <string name="select_your_enrolled_courses">Select your enrolled courses</string>
 </resources>
