--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,12 @@
     <string name="group_name">Group Name</string>
     <string name="enter_group_name">Enter Group Name</string>
     <string name="select_your_enrolled_courses">Select your enrolled courses</string>
+    <string name="group_title">Group Title</string>
+    <string name="group_members">Group Members</string>
+    <string name="upcoming_study_sessions">Upcoming Study Sessions</string>
+    <string name="create_session">Create session</string>
+    <string name="chat">Chat</string>
+    <string name="calendar">Calendar</string>
+    <string name="resources">Resources</string>
+    <string name="courses">Courses</string>
 </resources>
