--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,5 @@
     </string>
     <string name="action_settings">Settings</string>
     <string name="group_chats">Group Chats</string>
+    <string name="join_class">Join Class</string>
 </resources>
